@@ -33,6 +33,8 @@ It's a random seed
 Filename of an obdgpslogger logfile
 .IP dlopen
 Filename of a dynamically linked library
+.IP Socket
+ip-or-hostname:port
 .IP DBus
 Filename of a configuration file for the plugin
 .IP gui_fltk
